fixed title-bar title overflow

--- a/scss/layout.web/_title_bar.web.scss
+++ b/scss/layout.web/_title_bar.web.scss
@@ -6,6 +6,7 @@
   position: fixed;
   display: flex;
   z-index: 1001;
+  overflow: hidden;
 }
 
 .title-bar-btn {
